--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=base64:V8QHI0WNzSWHVxZyAO6GzJWprKxDXhsKfl4tWJOY3As=
+APP_KEY=base64:NmtM3u2rwLcHDtU0onqZLS0VkaMMlWiyE/+/RFkjRv4=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
@@ -8,7 +8,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=blog
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=root
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
